--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
             let box = document.createElement('div');
             box.classList.add('box');
+            box.setAttribute('data-question-number', `Savol ${index + 1}`);
             form.append(box);
 
             let savol = document.createElement('h2');
